@@ -53,15 +53,15 @@ public class GeoServerInfoImpl implements GeoServerInfo {
     protected WebUIMode webUIMode = WebUIMode.DEFAULT;
 
     // deprecated members, kept around to maintain xstream persistence backward compatability
-    @Deprecated protected ContactInfo contact;
-    @Deprecated protected String charset;
-    @Deprecated protected String title;
-    @Deprecated protected Integer numDecimals;
-    @Deprecated protected String onlineResource;
-    @Deprecated protected String schemaBaseUrl;
-    @Deprecated protected String proxyBaseUrl;
-    @Deprecated protected Boolean verbose;
-    @Deprecated protected Boolean verboseExceptions;
+    protected ContactInfo contact;
+    protected String charset;
+    protected String title;
+    protected Integer numDecimals;
+    protected String onlineResource;
+    protected String schemaBaseUrl;
+    protected String proxyBaseUrl;
+    protected Boolean verbose;
+    protected Boolean verboseExceptions;
 
     private ResourceErrorHandling resourceErrorHandling;
 
@@ -292,7 +292,7 @@ public class GeoServerInfoImpl implements GeoServerInfo {
         result = prime * result + ((clientProperties == null) ? 0 : clientProperties.hashCode());
         result = prime * result + ((id == null) ? 0 : id.hashCode());
         result = prime * result + ((metadata == null) ? 0 : metadata.hashCode());
-        result = prime * result + new Long(updateSequence).hashCode();
+        result = prime * result + Long.valueOf(updateSequence).hashCode();
         result = prime * result + (globalServices ? 1231 : 1237);
         result = prime * result + xmlPostRequestLogBufferSize;
         result =
