@@ -370,10 +370,10 @@ public class LegacyServicesReader {
                     Boolean.valueOf(
                             ReaderUtils.getBooleanAttribute(valueElement, "value", true, false));
         } else if (Integer.class.equals(clazz)) {
-            value = new Integer(ReaderUtils.getIntAttribute(valueElement, "value", true, -1));
+            value = Integer.valueOf(ReaderUtils.getIntAttribute(valueElement, "value", true, -1));
 
         } else if (Double.class.equals(clazz)) {
-            value = new Double(ReaderUtils.getDoubleAttribute(valueElement, "value", true));
+            value = Double.valueOf(ReaderUtils.getDoubleAttribute(valueElement, "value", true));
         } else {
             value = ReaderUtils.getAttribute(valueElement, "value", true);
         }
