@@ -513,7 +513,7 @@ public class GetFeature {
                                                     + " is "
                                                     + "not available "
                                                     + "for "
-                                                    + meta.getPrefixedName()
+                                                    + meta.prefixedName()
                                                     + ".  ";
 
                                     if (meta.getFeatureType() instanceof SimpleFeatureType) {
@@ -1230,6 +1230,21 @@ public class GetFeature {
         if (declaredCRS != null) {
             transformedFilter =
                     WFSReprojectionUtil.normalizeFilterCRS(filter, source.getSchema(), declaredCRS);
+        } else {
+            // this may happen with complex features, let's try to use the feature type info CRS
+            FeatureTypeInfo featureTypeInfo =
+                    catalog.getFeatureTypeByName(
+                            primaryTypeName.getPrefix(), primaryTypeName.getLocalPart());
+            if (featureTypeInfo != null && featureTypeInfo.getCRS() != null) {
+                // the feature type info has a CRS defined, so let's use it
+                transformedFilter =
+                        WFSReprojectionUtil.normalizeFilterCRS(
+                                filter,
+                                source.getSchema(),
+                                WFSReprojectionUtil.getDeclaredCrs(
+                                        featureTypeInfo.getCRS(), wfsVersion),
+                                featureTypeInfo.getCRS());
+            }
         }
 
         // replace gml:boundedBy with an expression
@@ -1387,7 +1402,7 @@ public class GetFeature {
     static Integer traverseXlinkDepth(String raw) {
         Integer traverseXlinkDepth = null;
         try {
-            traverseXlinkDepth = new Integer(raw);
+            traverseXlinkDepth = Integer.valueOf(raw);
         } catch (NumberFormatException nfe) {
             // try handling *
             if ("*".equals(raw)) {
@@ -1395,7 +1410,7 @@ public class GetFeature {
                 // might be reported in teh acapabilitis document, using
                 // INteger.MAX_VALUE will result in stack overflow... for now
                 // we just use 10
-                traverseXlinkDepth = new Integer(2);
+                traverseXlinkDepth = Integer.valueOf(2);
             } else {
                 // not wildcard case, throw original exception
                 throw nfe;
@@ -1425,6 +1440,7 @@ public class GetFeature {
         return meta;
     }
 
+    @SuppressWarnings("PMD.UnusedLocalVariable")
     List<List<String>> parsePropertyNames(Query query, List<FeatureTypeInfo> featureTypes) {
         List<List<String>> propNames = new ArrayList();
         for (FeatureTypeInfo featureType : featureTypes) {
@@ -1443,12 +1459,10 @@ public class GetFeature {
             // check for a full typename prefix
             for (int j = 0; j < featureTypes.size(); j++) {
                 FeatureTypeInfo featureType = featureTypes.get(j);
-                if (propName.startsWith(featureType.getPrefixedName() + "/")) {
+                if (propName.startsWith(featureType.prefixedName() + "/")) {
                     propNames
                             .get(j)
-                            .add(
-                                    propName.substring(
-                                            (featureType.getPrefixedName() + "/").length()));
+                            .add(propName.substring((featureType.prefixedName() + "/").length()));
                     continue O;
                 }
                 if (propName.startsWith(featureType.getName() + "/")) {
@@ -1558,68 +1572,7 @@ public class GetFeature {
 
             if (query.getSrsName() != null) {
                 final Query fquery = query;
-                fvisitor =
-                        new AbstractFilterVisitor() {
-                            public Object visit(BBOX filter, Object data) {
-                                if (filter.getSRS() != null
-                                        && !fquery.getSrsName()
-                                                .toString()
-                                                .equals(filter.getSRS())) {
-
-                                    // back project bounding box into geographic coordinates
-                                    CoordinateReferenceSystem geo = DefaultGeographicCRS.WGS84;
-
-                                    GeneralEnvelope e =
-                                            new GeneralEnvelope(
-                                                    new double[] {
-                                                        filter.getMinX(), filter.getMinY()
-                                                    },
-                                                    new double[] {
-                                                        filter.getMaxX(), filter.getMaxY()
-                                                    });
-                                    CoordinateReferenceSystem crs = null;
-                                    try {
-                                        crs = CRS.decode(filter.getSRS());
-                                        e.setCoordinateReferenceSystem(crs);
-                                        e = CRS.transform(e, geo);
-                                    } catch (Exception ex) {
-                                        throw new WFSException(request, ex);
-                                    }
-
-                                    // ensure within bounds defined by srs specified on
-                                    // query
-                                    try {
-                                        crs = CRS.decode(fquery.getSrsName().toString());
-                                    } catch (Exception ex) {
-                                        throw new WFSException(request, ex);
-                                    }
-
-                                    GeographicBoundingBox valid =
-                                            (GeographicBoundingBox)
-                                                    crs.getDomainOfValidity()
-                                                            .getGeographicElements()
-                                                            .iterator()
-                                                            .next();
-
-                                    if (e.getMinimum(0) < valid.getWestBoundLongitude()
-                                            || e.getMinimum(0) > valid.getEastBoundLongitude()
-                                            || e.getMaximum(0) < valid.getWestBoundLongitude()
-                                            || e.getMaximum(0) > valid.getEastBoundLongitude()
-                                            || e.getMinimum(1) < valid.getSouthBoundLatitude()
-                                            || e.getMinimum(1) > valid.getNorthBoundLatitude()
-                                            || e.getMaximum(1) < valid.getSouthBoundLatitude()
-                                            || e.getMaximum(1) > valid.getNorthBoundLatitude()) {
-
-                                        throw new WFSException(
-                                                request,
-                                                "bounding box out of valid range of crs",
-                                                "InvalidParameterValue");
-                                    }
-                                }
-
-                                return data;
-                            }
-                        };
+                fvisitor = new CiteBBOXValidator(fquery, request);
 
                 filter.accept(fvisitor, null);
             }
@@ -1726,5 +1679,62 @@ public class GetFeature {
         }
 
         return properties;
+    }
+
+    private static class CiteBBOXValidator extends AbstractFilterVisitor {
+        private final Query fquery;
+        private final GetFeatureRequest request;
+
+        public CiteBBOXValidator(Query fquery, GetFeatureRequest request) {
+            this.fquery = fquery;
+            this.request = request;
+        }
+
+        public Object visit(BBOX filter, Object data) {
+            ReferencedEnvelope ex2Envelope =
+                    filter.getExpression2().evaluate(null, ReferencedEnvelope.class);
+            try {
+                CoordinateReferenceSystem queryCrs = CRS.decode(fquery.getSrsName().toString());
+                if (ex2Envelope != null
+                        && ex2Envelope.getCoordinateReferenceSystem() != null
+                        && !queryCrs.equals(ex2Envelope.getCoordinateReferenceSystem())) {
+                    // back project bounding box into geographic coordinates
+                    CoordinateReferenceSystem geo = DefaultGeographicCRS.WGS84;
+
+                    GeneralEnvelope e = new GeneralEnvelope(filter.getBounds());
+                    e = CRS.transform(e, geo);
+
+                    // ensure within bounds defined by srs specified on
+                    // query
+                    CoordinateReferenceSystem crs = queryCrs;
+
+                    GeographicBoundingBox valid =
+                            (GeographicBoundingBox)
+                                    crs.getDomainOfValidity()
+                                            .getGeographicElements()
+                                            .iterator()
+                                            .next();
+
+                    if (e.getMinimum(0) < valid.getWestBoundLongitude()
+                            || e.getMinimum(0) > valid.getEastBoundLongitude()
+                            || e.getMaximum(0) < valid.getWestBoundLongitude()
+                            || e.getMaximum(0) > valid.getEastBoundLongitude()
+                            || e.getMinimum(1) < valid.getSouthBoundLatitude()
+                            || e.getMinimum(1) > valid.getNorthBoundLatitude()
+                            || e.getMaximum(1) < valid.getSouthBoundLatitude()
+                            || e.getMaximum(1) > valid.getNorthBoundLatitude()) {
+
+                        throw new WFSException(
+                                request,
+                                "bounding box out of valid range of crs",
+                                "InvalidParameterValue");
+                    }
+                }
+            } catch (Exception e) {
+                throw new WFSException(request, e);
+            }
+
+            return data;
+        }
     }
 }
